Overflow fixed

--- a/src/app/components/footer/footer.component.css
+++ b/src/app/components/footer/footer.component.css
@@ -1,7 +1,7 @@
 .footer {
     background-color: #388087;
     text-align: center;
-    /* position: fixed; */
+    position: fixed;
     bottom: 0;
     width: 100%;
     height: 3rem;
